# cpp_starter

./: .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
Editor/src/: main.cpp
Engine/src/: GGEngine.h  ggpch.h
Engine/src/GGEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  Log.cpp  Log.h  Window.h
Engine/src/GGEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/GGEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h
Engine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/src/: main.cpp
scripts/: resolve-preset.bat  resolve-preset.sh
