cmake_minimum_required(VERSION 3.20)

project(GGEngine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Dist Build Type Configuration
set(CMAKE_CXX_FLAGS_DIST "${CMAKE_CXX_FLAGS_RELEASE}")
set(CMAKE_C_FLAGS_DIST "${CMAKE_C_FLAGS_RELEASE}")
set(CMAKE_EXE_LINKER_FLAGS_DIST "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
set(CMAKE_SHARED_LINKER_FLAGS_DIST "${CMAKE_SHARED_LINKER_FLAGS_RELEASE}")

if(CMAKE_BUILD_TYPE STREQUAL "Dist")
    add_compile_definitions(GG_DIST)
endif()

# Output layout (as requested)
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(BIN_CONFIG "Release-x64")
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(BIN_CONFIG "Debug-x64")
else()
    set(BIN_CONFIG "${CMAKE_BUILD_TYPE}-x64")
endif()
set(BIN_ROOT "${CMAKE_SOURCE_DIR}/bin/${BIN_CONFIG}")

option(GGENGINE_BUILD_DLL "Build Engine as a shared library" ON)

if(GGENGINE_BUILD_DLL)
    add_library(Engine SHARED
        Engine/src/GGEngine.h
        Engine/src/GGEngine/Application.h
        Engine/src/GGEngine/Application.cpp
        Engine/src/GGEngine/Core.h
        Engine/src/GGEngine/Log.h
        Engine/src/GGEngine/Log.cpp
        Engine/src/GGEngine/Events/Event.h
        Engine/src/GGEngine/Events/ApplicationEvent.h
        Engine/src/GGEngine/Events/KeyEvent.h
        Engine/src/GGEngine/Events/MouseEvent.h
        Engine/src/GGEngine/Layer.cpp
        Engine/src/GGEngine/Layer.h
        Engine/src/GGEngine/LayerStack.cpp
        Engine/src/GGEngine/LayerStack.h
        Engine/src/GGEngine/Window.h
        Engine/src/Platform/Windows/WindowsWindow.h
        Engine/src/Platform/Windows/WindowsWindow.cpp
        Engine/src/ggpch.h
        Engine/src/ggpch.cpp
    )
    target_compile_definitions(Engine PRIVATE GG_BUILD_DLL)
else()
    add_library(Engine STATIC
        Engine/src/GGEngine.h
        Engine/src/GGEngine/Application.h
        Engine/src/GGEngine/Application.cpp
        Engine/src/GGEngine/Core.h
        Engine/src/GGEngine/Log.h
        Engine/src/GGEngine/Log.cpp
        Engine/src/GGEngine/Events/Event.h
        Engine/src/GGEngine/Events/ApplicationEvent.h
        Engine/src/GGEngine/Events/KeyEvent.h
        Engine/src/GGEngine/Events/MouseEvent.h
        Engine/src/GGEngine/Layer.cpp
        Engine/src/GGEngine/Layer.h
        Engine/src/GGEngine/LayerStack.cpp
        Engine/src/GGEngine/LayerStack.h
        Engine/src/GGEngine/Window.h
        Engine/src/Platform/Windows/WindowsWindow.h
        Engine/src/Platform/Windows/WindowsWindow.cpp
        Engine/src/ggpch.h
        Engine/src/ggpch.cpp
    )
endif()

target_compile_definitions(Engine PUBLIC GG_PLATFORM_WINDOWS)

# Dependencies
add_subdirectory(Vendor/spdlog)
add_subdirectory(Vendor/glad)
target_link_libraries(Engine PUBLIC spdlog::spdlog glad)

# GLFW
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
add_subdirectory(Vendor/glfw)
target_link_libraries(Engine PRIVATE glfw)

target_include_directories(Engine PUBLIC
    ${CMAKE_SOURCE_DIR}/Engine/src
)

target_precompile_headers(Engine PUBLIC Engine/src/ggpch.h)

set_target_properties(Engine PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${BIN_ROOT}/Engine"
    ARCHIVE_OUTPUT_DIRECTORY "${BIN_ROOT}/Engine"
    LIBRARY_OUTPUT_DIRECTORY "${BIN_ROOT}/Engine"
    OUTPUT_NAME "GGEngine"
    PREFIX ""
)

if(GGENGINE_BUILD_DLL)
    set_target_properties(Engine PROPERTIES
        WINDOWS_EXPORT_ALL_SYMBOLS ON
    )
endif()

add_executable(Sandbox
    Sandbox/src/main.cpp
)

target_link_libraries(Sandbox PRIVATE Engine)

set_target_properties(Sandbox PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${BIN_ROOT}/Sandbox"
)

add_executable(Editor
    Editor/src/main.cpp
)

target_link_libraries(Editor PRIVATE Engine)

set_target_properties(Editor PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${BIN_ROOT}/Editor"
)

if(GGENGINE_BUILD_DLL)
    # Copy Engine DLL to Sandbox and Editor output dirs post-build
    add_custom_command(TARGET Sandbox POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:Engine>
            $<TARGET_FILE_DIR:Sandbox>
    )

    add_custom_command(TARGET Editor POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:Engine>
            $<TARGET_FILE_DIR:Editor>
    )
endif()
